settings and Explore Pages

--- a/pages/user_homepage.html
+++ b/pages/user_homepage.html
@@ -13,10 +13,12 @@
     <div class="container">
 
         <aside class="sidebar">
-            <div class="logo">
-                <h3 class="left">Bon</h3>
-                <h3>ten</h3>
-            </div>
+            <a href="user_homepage.html" style="text-decoration: none;">
+                <div class="logo">
+                    <h3 class="left">Bon</h3>
+                    <h3>ten</h3>
+                </div>
+            </a>
 
             <nav class="nav-menu">
 
@@ -52,10 +54,12 @@
                     <h1>Welcome back, Jerome!</h1>
                     <p>ready to explore what's happening near you?</p>
                 </div>
-                <button class="explore_button">
-                    Find Events Near Me
-                    <img src="../assets/search.png" alt="Search" class="button_icon">
-                </button>
+                <a href="explore.html" style="text-decoration: none;">
+                    <button class="explore_button">
+                        Find Events Near Me
+                        <img src="../assets/search.png" alt="Search" class="button_icon">
+                    </button>
+                </a>
             </div>
 
             <aside class="schedule_widget">
