--- a/pages/explore.html
+++ b/pages/explore.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Events</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/event.css">
     <link rel="stylesheet" href="../css/explore.css">
     <link rel="icon" href="/assets/bonten.png" type="image/x-icon">
+    <script src="../js/language.js"></script>
 
 </head>
 <body>
  <div class="container">
 
         <aside class="sidebar">
-            <div class="logo">
-                <h3 class="left">Bon</h3>
-                <h3>ten</h3>
-            </div>
+            <a href="user_homepage.html" style="text-decoration: none;">
+                <div class="logo">
+                    <h3 class="left">Bon</h3>
+                    <h3>ten</h3>
+                </div>
+            </a>
 
             <nav class="nav-menu">
 
-            <a href="../pages/user_homepage.html" class="nav-item">Home</a>
-            <a href="../pages/explore.html" class="nav-item active">Explore</a>
-            <a href="../pages/history.html" class="nav-item">History</a>
-            
+            <a href="../pages/user_homepage.html" class="nav-item" data-translate="home">Home</a>
+            <a href="../pages/explore.html" class="nav-item active" data-translate="explore">Explore</a>
+            <a href="../pages/history.html" class="nav-item" data-translate="history">History</a>
+
 
             </nav>
 
             <div class="lower-menu">
-                <a href="../pages/settings.html" class="nav-item">Settings</a>
-                <a href="index.html" class="logout">Logout</a>
+                <a href="../pages/settings.html" class="nav-item" data-translate="settings">Settings</a>
+                <a href="index.html" class="logout" data-translate="logout">Logout</a>
 
             </div>
 
@@ -47,10 +51,217 @@
         </div>
 
         <div class="main-body">
-            <h2> Coming soon</h2>
+            <div class="explore-container">
+
+                <!-- Events Suggested For You Section -->
+                <section class="events-section">
+                    <h2 class="section-title" data-translate="eventsSuggestedForYou">Events Suggested For You</h2>
+                    <div class="carousel-wrapper">
+                        <button class="carousel-arrow prev">‹</button>
+                        <div class="events-carousel" id="suggested-carousel">
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/ashchella.jpg" alt="Ashchella">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Ashchella</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Ashesi University</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/y2k.JPG" alt="Y2K Neon">
+                                    <span class="event-badge">Beach</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Y2K Neon</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Lemon Beach</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/tidalrave.jpg" alt="Tidal Rave">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Tidal Rave</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Labadi Beach</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/gff.jpg" alt="GFF">
+                                    <span class="event-badge">Food</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">GFF</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Accra Mall</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/imullar.jpg" alt="iMullar">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">iMullar</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Jazz Bar</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <button class="carousel-arrow next">›</button>
+                    </div>
+                </section>
+
+                <!-- Trending Events Section -->
+                <section class="events-section">
+                    <h2 class="section-title" data-translate="trendingEvents">Trending Events</h2>
+                    <div class="carousel-wrapper">
+                        <button class="carousel-arrow prev">‹</button>
+                        <div class="events-carousel" id="trending-carousel">
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/a.png" alt="Afro Nation">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Afro Nation</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> East Legon </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/sank.jpg" alt="Sankrofi">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name"> Sankrofi </h3>
+                                    <div class="event-meta">
+                                        <span class="event-location">  Asahley Botwe </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/phoenix.avif" alt="Phoenix">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name"> Phoenix</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Kumasi </span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/bO.jpg" alt="Band Out!">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Band Out!</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Oyarifa</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="event-card">
+                                <div class="card-image">
+                                    <img src="../assets/osibisa.avif" alt="Osibisa">
+                                    <span class="event-badge">Concert</span>
+                                    <button class="bookmark-btn">⬜</button>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="event-name">Osibisa</h3>
+                                    <div class="event-meta">
+                                        <span class="event-location"> Jazz Bar</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <button class="carousel-arrow next">›</button>
+                    </div>
+                </section>
+
+            </div>
         </div>
 
     </div>
+
+    <script>
+        // Carousel functionality
+        document.querySelectorAll('.carousel-wrapper').forEach(wrapper => {
+            const carousel = wrapper.querySelector('.events-carousel');
+            const prevBtn = wrapper.querySelector('.prev');
+            const nextBtn = wrapper.querySelector('.next');
+
+            const cardWidth = 200;
+            const gap = 20;
+            const scrollAmount = cardWidth + gap;
+
+            prevBtn.addEventListener('click', () => {
+                carousel.scrollBy({
+                    left: -scrollAmount,
+                    behavior: 'smooth'
+                });
+            });
+
+            nextBtn.addEventListener('click', () => {
+                carousel.scrollBy({
+                    left: scrollAmount,
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Bookmark functionality
+        document.querySelectorAll('.bookmark-btn').forEach(btn => {
+            btn.addEventListener('click', (e) => {
+                e.preventDefault();
+                if (btn.classList.contains('bookmarked')) {
+                    btn.classList.remove('bookmarked');
+                    btn.textContent = '⬜';
+                } else {
+                    btn.classList.add('bookmarked');
+                    btn.textContent = '🔖';
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
