--- a/pages/history.html
+++ b/pages/history.html
@@ -7,28 +7,31 @@
     <link rel="stylesheet" href="../css/event.css">
     <link rel="stylesheet" href="../css/history.css">
     <link rel="icon" href="/assets/bonten.png" type="image/x-icon">
+    <script src="../js/language.js"></script>
 </head>
 <body>
 <div class="container">
 
         <aside class="sidebar">
-            <div class="logo">
-                <h3 class="left">Bon</h3>
-                <h3>ten</h3>
-            </div>
+            <a href="user_homepage.html" style="text-decoration: none;">
+                <div class="logo">
+                    <h3 class="left">Bon</h3>
+                    <h3>ten</h3>
+                </div>
+            </a>
 
             <nav class="nav-menu">
 
-            <a href="../pages/user_homepage.html" class="nav-item">Home</a>
-            <a href="../pages/explore.html" class="nav-item">Explore</a>
-            <a href="../pages/history.html" class="nav-item active">History</a>
-            
+            <a href="../pages/user_homepage.html" class="nav-item" data-translate="home">Home</a>
+            <a href="../pages/explore.html" class="nav-item" data-translate="explore">Explore</a>
+            <a href="../pages/history.html" class="nav-item active" data-translate="history">History</a>
+
 
             </nav>
 
             <div class="lower-menu">
-                <a href="../pages/settings.html" class="nav-item">Settings</a>
-                <a href="index.html" class="logout">Logout</a>
+                <a href="../pages/settings.html" class="nav-item" data-translate="settings">Settings</a>
+                <a href="index.html" class="logout" data-translate="logout">Logout</a>
 
             </div>
 
@@ -46,7 +49,7 @@
         </div>
 
         <div class="main-body">
-            <h2> Coming soon</h2>
+            <h2 data-translate="comingSoon"> Coming soon</h2>
         </div>
 
     </div>
